# chemistry

./: .chk.fchk.swp  .gitignore  CMakeLists.txt  README.md  a.in  a.out  chk.chk  chk.fchk  func.out  func_backup.out  func_backup_real.out  pic.py  tmp.inp  tmp.out
data/0/: 10.xyz  14.xyz  19.xyz  3.xyz  4.xyz  6.xyz  7.xyz  9.xyz
data/H2/: 1.xyz  12.xyz  14.xyz  16.xyz  17.xyz  2.xyz  3.xyz  4.xyz  6.xyz  8.xyz
data/inverse/: 1.xyz  2.xyz
data/left_out/: 10.xyz  14.xyz  15.xyz  18.xyz  19.xyz  2.xyz  3.xyz  4.xyz  5.xyz
data/right_out/: 10.xyz  11.xyz  12.xyz  13.xyz  14.xyz  17.xyz  18.xyz  19.xyz  2.xyz  5.xyz  7.xyz
data_old/: cur.in
data_old/0/: 13.xyz  15.xyz  18.xyz  5.xyz
data_old/H2/: 0.xyz  10.xyz  11.xyz  13.xyz  15.xyz  18.xyz  19.xyz  5.xyz  7.xyz  9.xyz
data_old/inverse/: 11.xyz  12.xyz  16.xyz  17.xyz  8.xyz
data_old/left_out/: 1.xyz  11.xyz  12.xyz  13.xyz  16.xyz  17.xyz  6.xyz  7.xyz  8.xyz  9.xyz
data_old/right_out/: 1.xyz  15.xyz  16.xyz  3.xyz  4.xyz  6.xyz  8.xyz  9.xyz
experiments/: Untitled.ipynb  framework.ipynb
experiments/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  framework-checkpoint.ipynb  main-checkpoint.ipynb
question/: main.tex
src/: AffineTransformation.h  Constant.h  Desturbed.h  FixValues.h  FunctionProducer.h  FunctionProducers.h  GaussianProducer.h  GradientDescent.h  InPolar.h  InputOutputUtils.cpp  InputOutputUtils.h  LagrangeMultiplier.h  ModelFunction.h  ModelFunction3.h  ModelMultidimensionalFunction.h  Product.h  PythongraphicsFramework.cpp  PythongraphicsFramework.h  SqrNorm.h  Sum.h  constants.h  functionLoggers.h  helper.cpp  helper.h  inputOutputUtils.cpp  inputOutputUtils.h  linearAlgebraUtils.cpp  linearAlgebraUtils.h  linearization.h  linearization.hpp  main.cpp  normalCoordinates.h  shsWorkflow.h  tests.cpp
src/modules/: benchmarkTest.cpp  findInitialPolarDirections.cpp  optimizerBenchmark.cpp
src/moodules/: optimizerBenchmark.cpp
src/optimization/: Adadelta.h  Adagrad.h  Adam.h  AtomicStopStrategy.h  DeltaNormStopStrategy.h  FollowGradientDeltaStrategy.h  GradientDescent.h  GradientLengthStopCriteria.h  GradientLengthStopStrategy.h  GradientNormStopStrategy.h  HessianDeltaStrategy.h  HessianGradientDescent.h  History.h  HistoryStrategyWrapper.h  MomentumGradientDescent.h  NesterovGradientDescent.h  QuasiNewtonDeltaStrategy.h  SecondOrderGradientDescent.h  StopStrategy.h  optimizations.h  optimizeOnSphere.h
src/producers/: AffineTransformation.h  CleverCosine3OnSphereInterpolation.cpp  CleverCosine3OnSphereInterpolation.h  ClosestCosine3OnSphere.cpp  ClosestCosine3OnSphere.h  Constant.cpp  Constant.h  Cosine3OnSphereInterpolation.cpp  Cosine3OnSphereInterpolation.h  Difference.h  FixValues.cpp  FixValues.h  FunctionProducer.cpp.cpp  FunctionProducer.h  GaussianProducer.cpp  GaussianProducer.h  InPolar.h  LagrangeMultiplier.h  LargestCosine3OnSphere.cpp  LargestCosine3OnSphere.h  ModelFunction.h  ModelMultidimensionalFunction.h  MultipliedByConstant.h  OnSphereCosineSupplement.cpp  OnSphereCosineSupplement.h  SecondOrderFunction.cpp  SecondOrderFunction.h  SqrNorm.cpp  SqrNorm.h  Sum.h  producers.h
src/testing/: CoordinateSystemChange.cpp  coordinateSystemChange.cpp  newDegreeDelition.cpp  newDegreeDelition.h  tests.h
src/tests/: benchmark_test.cpp  tests.cpp
work/: C2H4  C2H4_2  C2H4_equilStructure  C2H4_polarDirections  H2O  _C2H4  __backup_C2H4_polarDirections  all_mins_on_sphere  chk.chk  chk.fchk  current.xyz  current_path.xyz  first  first.xyz  framework.ipynb  func.out  func2.out  func_mem.out  hessian.inp  hessian.out  log.xyz  loggg  mins_on_sphere  mins_on_sphere2  mins_on_sphere_filtered  out_with_err  read_tmp  second  second.xyz  test.xyz  tmp.inp  tmp.out
work/.ipynb_checkpoints/: framework-checkpoint.ipynb
work/0/: 0.xyz  1.xyz  10.xyz  100.xyz  101.xyz  102.xyz  103.xyz  104.xyz  105.xyz  106.xyz  107.xyz  108.xyz  109.xyz  11.xyz  110.xyz  111.xyz  112.xyz  113.xyz  114.xyz  115.xyz  116.xyz  117.xyz  118.xyz  119.xyz  12.xyz  120.xyz  121.xyz  122.xyz  123.xyz  124.xyz  125.xyz  126.xyz  127.xyz  128.xyz  129.xyz  13.xyz  130.xyz  131.xyz  132.xyz  133.xyz  (+341 more)
work/1/: 0.xyz  1.xyz  10.xyz  100.xyz  101.xyz  102.xyz  103.xyz  104.xyz  105.xyz  106.xyz  107.xyz  108.xyz  109.xyz  11.xyz  110.xyz  111.xyz  112.xyz  113.xyz  114.xyz  115.xyz  116.xyz  117.xyz  118.xyz  119.xyz  12.xyz  120.xyz  121.xyz  122.xyz  123.xyz  124.xyz  125.xyz  126.xyz  127.xyz  128.xyz  129.xyz  13.xyz  130.xyz  131.xyz  132.xyz  133.xyz  (+335 more)
work/10/: 0.xyz  1.xyz  10.xyz  100.xyz  101.xyz  102.xyz  103.xyz  104.xyz  105.xyz  106.xyz  107.xyz  108.xyz  109.xyz  11.xyz  110.xyz  111.xyz  112.xyz  113.xyz  114.xyz  115.xyz  116.xyz  117.xyz  118.xyz  119.xyz  12.xyz  120.xyz  121.xyz  122.xyz  123.xyz  124.xyz  125.xyz  126.xyz  127.xyz  128.xyz  129.xyz  13.xyz  130.xyz  131.xyz  132.xyz  133.xyz  (+328 more)
work/11/: 0.xyz
work/13/: 0.xyz  1.xyz  10.xyz  100.xyz  101.xyz  102.xyz  103.xyz  104.xyz  105.xyz  106.xyz  107.xyz  108.xyz  109.xyz  11.xyz  110.xyz  111.xyz  112.xyz  113.xyz  114.xyz  115.xyz  116.xyz  117.xyz  118.xyz  119.xyz  12.xyz  120.xyz  121.xyz  122.xyz  123.xyz  124.xyz  125.xyz  126.xyz  127.xyz  128.xyz  129.xyz  13.xyz  130.xyz  131.xyz  132.xyz  133.xyz  (+336 more)
work/2/: 0.xyz  1.xyz  10.xyz  100.xyz  101.xyz  102.xyz  103.xyz  104.xyz  105.xyz  106.xyz  107.xyz  108.xyz  109.xyz  11.xyz  110.xyz  111.xyz  112.xyz  113.xyz  114.xyz  115.xyz  116.xyz  117.xyz  118.xyz  119.xyz  12.xyz  120.xyz  121.xyz  122.xyz  123.xyz  124.xyz  125.xyz  126.xyz  127.xyz  128.xyz  129.xyz  13.xyz  130.xyz  131.xyz  132.xyz  133.xyz  (+335 more)
work/3/: 0.xyz  1.xyz  10.xyz  100.xyz  101.xyz  102.xyz  103.xyz  104.xyz  105.xyz  106.xyz  107.xyz  108.xyz  (+369 more)
(+6475 files in other folders)
